--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -1,7 +1,7 @@
 .navbar-wrapper {
   position: fixed;
   top: 0;
-  width: 100%;
+  width: 100vw;
   z-index: 100;
 }
 
